css/frame.css
/* ... */
.group-wrapper .group .group:hover .group-title,
.group-wrapper .group .group.open .group-title {
	border-left-color: #0073aa;
	color: #0073aa;
	background: #f3f3f5;
}

.group-wrapper .group .group .group-title:after {
	position: absolute;
	z-index: 1;
	top: 11px;
	right: 10px;
	color: #a0a5aa;
	font: 400 20px/1 dashicons;
	content: "\f345";
}

.group-wrapper .group .group.open .group-title:after {
	content: "\f347";
}

.group-wrapper .group .customize-section-back {
	display: block;
	float: left;
	width: 42px;
	height: 49px;
	margin: 0 15px 0 0;
	padding: 0;
	border: none;
	border-top: 1px solid #ddd;
	border-right: 1px solid #ddd;
	border-left: 4px solid #fff;
	background: #fff;
	-webkit-box-shadow: none;
	box-shadow: none;
	cursor: pointer;
	-webkit-transition: color 0.15s ease-in-out,border-color 0.15s ease-in-out,background 0.15s ease-in-out;
	transition: color 0.15s ease-in-out,border-color 0.15s ease-in-out,background 0.15s ease-in-out;
}

.group-wrapper .group .customize-section-back:hover {
	border-left-color: #0073aa;
	outline: 0;
	color: #0073aa;
	background: #f3f3f5;
}

.group-wrapper .group .customize-section-back:before {
	position: relative;
	top: -11px;
	left: -2px;
	font: 400 20px/72px dashicons;
	content: "\f341";
}

.group-wrapper.full-height {
	float: left;
	position: relative;
	width: 100%;
	height: 100%;
	margin: 0;
}

.group.bottom-fixed {
	display: block;
	position: absolute;
	bottom: 0;
	width: 100%;
}

.group ul li h2,
.group ul li h3 {
	padding: 7px 15px 7px 35px;
}

.group h2 .dashicons {
	margin-right: 5px;
	vertical-align: -5px;
}

.group-content {
	display: none;
	margin: 0;
	padding: 0;
	background-color: #fdfdfd;
}

div.group-content {
	padding: 15px;
}

.group.open > .group-content {
	display: block;
}

.group-description {
	margin: 0;
	padding: 5px 20px 10px;
	color: #555;
	font-size: 12px;
}

div.group-content .group-description {
	padding: 0;
	font-family: "Montserrat",sans-serif;
	font-weight: 300;
}

.initial-screen .group-description {
	padding: 0;
	padding: 10px 20px 20px;
	font-family: "Montserrat",sans-serif;
	font-weight: 300;
}

.section-title {
	display: block;
	position: relative;
	margin-bottom: 5px;
	padding: 4px 20px;
	border-top: 1px solid #eee;
	border-bottom: 1px solid #eee;
	background-color: rgba(0, 0, 0, 0.02);
	-webkit-box-shadow: 0 4px 4px -4px rgba(0, 0, 0, 0.1);
	box-shadow: 0 4px 4px -4px rgba(0, 0, 0, 0.1);
	font-weight: bold;
	cursor: pointer;
}

.group-wrapper ul ul li .section-title {
	margin-bottom: 0;
	border: none;
	-webkit-box-shadow: none;
	box-shadow: none;
}

.section-title::after {
	position: absolute;
	z-index: 1;
	top: 13px;
	right: 20px;
	width: 0;
	height: 0;
	border-width: 4px 4px 0;
	border-style: solid;
	border-color: #ccc transparent;
	content: "";
}

.section-title.open::after {
	border-width: 0 4px 4px;
}

.section-items {
	display: none;
	padding: 15px;
}

.section-items.open {
	display: block;
}

.more-info {
	display: none;
	float: right;
	color: #21759b;
	font-size: 85%;
	font-weight: normal;
	text-decoration: none;
}

.section-description {
	margin: 0;
	/*display: none;*/
	padding: 0;
	color: gray;
	font-size: 11px;
}

.section-table {
	width: 100%;
}

.section-delimiter {
	margin: 15px 0;
	border-top: 1px dashed #ccc;
}

.section-table-column {
	width: 50%;
	padding: 0 1px;
	text-align: left;
	vertical-align: top;
}

.section-item {
	margin-bottom: 10px;
}

.control-select,
.control-text {
	width: 100%;
}

.control-check {
	float: right;
}

.control-check::after {
	clear: both;
}

.section-description ul {
	margin: 0 0 0 25px;
	list-style: circle;
}

.section-description li {
	margin: 0;
	list-style: circle;
}

#rate-the-plugin {
	margin-top: 40px;
	padding: 20px;
	border-top: 1px dashed #ddd;
	text-align: center;
}

.rate-the-plugin {
	width: 40% !important;
	margin-top: -5px;
}

#rate-stars {
	width: 100px;
	height: 20px;
	margin: 15px auto;
	background-image: url("../images/star.png");
	background-repeat: repeat-x;
	background-position: right center;
}

#rate-link {
	font-family: "Montserrat",sans-serif;
	font-weight: 400;
	text-decoration: none;
}

#flattr {
	margin-top: 15px;
	text-align: center;
}

/******************************************************************************/
/********************************  TOOLBAR  ***********************************/
/******************************************************************************/

#toolbar {
	overflow: hidden;
	position: absolute;
	z-index: 100;
	right: 0;
	bottom: 0;
	left: 0;
	height: 36px;
	padding: 12px 16px;
	border-top: 1px solid #dfdfdf;
	-webkit-box-shadow: 0 -4px 4px -4px rgba(0, 0, 0, 0.1);
	box-shadow: 0 -4px 4px -4px rgba(0, 0, 0, 0.1);
	text-align: center;
}

#toolbar .push-right {
	float: right;
}

.toolbar-div a {
	float: left;
}

.toolbar-div {
	display: inline-block;
	float: left;
	width: 30%;
	vertical-align: top;
}

/******************************************************************************/
/********************************  TYPE PICKER   ******************************/
/******************************************************************************/

.type-box span {
	display: block;
	position: absolute;
	right: 0;
	bottom: -6px;
	width: 100%;
	padding: 4px 0;
	border-top: 1px dashed #ddd;
	border-bottom: 1px dashed #ddd;
	background: #e0e0e0;
	background-color: #efefef;
	-webkit-box-shadow: 0 0 8px #ddd;
	box-shadow: 0 0 8px #ddd;
	font-weight: bold;
	text-align: center;
}

.type-box .pro-upsell {
	color: #c55555;
}

#type-picker {
	width: 952px;
	margin: 50px auto;
}

.type-box {
	float: left;
	position: relative;
	margin: 0 20px 20px 0;
	border: 1px dashed #ddd;
	background-color: #efefef;
	-webkit-box-shadow: 0 0 8px #ddd;
	box-shadow: 0 0 8px #ddd;
}

.type-box:nth-child(3n+3) {
	margin-right: 0;
}

.type-box .pro-upsell .visualizder-pro-label {
	display: inline;
	position: absolute;
	top: 0;
	width: 74px;
	height: 10px;
	height: 17px;
	border: none;
	color: #fff;
	background: #c55555;
}
/* ... */

